# murphys-community-radio

./: .env.example  .gitignore  eslint.config.mjs  middleware.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: sync-mixcloud-archive.yml
app/: globals.css  layout.tsx  page.tsx
app/archive/: page.tsx
app/components/: CurrentUnderwritersCarousel.tsx  LiveBroadcastButton.tsx  NowPlayingSummary.tsx  RadioPlayer.tsx
app/host-login/: page.tsx
app/lib/: cupAJoe.ts  cupAJoeAi.ts  (+14 more)
apps/crate-os-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/crate-os-desktop/src-tauri/icons/: icon.icns
apps/crate-os-desktop/src-tauri/migrations/: 001_init.sql
apps/crate-os-desktop/src-tauri/src/: lib.rs  main.rs
components/: Live365Player.tsx  NowPlayingPanel.tsx
dj-library-toolkit/: .gitignore  README.md  package.json  tsconfig.json
docs/: dj-library-app-paywall-and-bridge.md  dj-library-app-product-plan.md  live365-weekly-upload.md  murphys-irish-pub-email-draft.eml  murphys-irish-pub-radio-station-one-sheet.md  music-archive-sync.md
public/: manifest.json
scripts/: build-and-upload-radio-archive.mjs  build-radio-archive.mjs  create-station-status-table.sql  inventory-master-library.mjs  live365-country-shows.mjs  live365-delete-country-longform.mjs  live365-mac-library-upload.mjs  live365-quarantine-mixtapes.mjs  live365-replay-categories.mjs  live365-replay-clockwheels.mjs  live365-replay-events.mjs  live365-replay-playlists.mjs  live365-weekly-upload.mjs  sync-mixcloud-archive.mjs
(+64 files in other folders)
