[package]
name = "crate-os-desktop"
version = "0.1.0"
description = "Crate OS by XTRAGOODLABS"
authors = ["XTRAGOODLABS"]
edition = "2021"

[lib]
name = "crate_os_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lofty = "0.22"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["aac", "aiff", "alac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
